fix: fix logout not showing and not excuting logout

--- a/app/globals.css
+++ b/app/globals.css
@@ -150,14 +150,14 @@ layer(base);
 }
 
 @utility dropdown-menu {
-  @apply w-56! border-[5px]! border-black! bg-white! p-5! rounded-2xl!;
+  @apply w-56! border-[5px]! border-gray-600! p-2! rounded-2xl! bg-primary-100! z-110!;
 }
 
 @utility dropdown_border {
   @apply text-black hover:bg-secondary border-b border-gray-200 last:border-b-0;
 }
 
-@utility dropdown-menu_hover {
+@utility navbar-menu_hover {
   @apply hover:bg-secondary border rounded-lg p-3 items-center gap-2;
 }
 
